default/objects/Exception_Log__c/fields/Govt_Limit_in_Executing_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Govt_Limit_in_Executing_Code_c__c</fullName>
    <label>Govt_Limit_in_Executing_Code__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>