default/objects/Exception_Log__c/fields/Log_In_User__c.field-meta.xml
<CustomField>
    <fullName>Log_In_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log In User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>