default/objects/Exception_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Error Log</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>