default/objects/Exception_Log__c/fields/Notify_Admin__c.field-meta.xml
<CustomField>
    <fullName>Notify_Admin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notify Admin</label>
    <type>Checkbox</type>
</CustomField>