default/objects/Exception_Log__c/fields/Related_To_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Record_Id__c</fullName>
    <label>Related To Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>