default/objects/Exception_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Name Of The Class From Exception Raise</description>
    <label>Source</label>
    <type>TextArea</type>
</CustomField>