default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Log_In_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>